# reqwest_mock

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
examples/: simple.rs
src/: body.rs  config.rs  error.rs  helper.rs  lib.rs  request.rs  request_builder.rs  response.rs
src/client/: direct.rs  generic.rs  mod.rs  replay.rs  rocket.rs  stub.rs
src/client/stub/: builder.rs  error.rs  mod.rs  settings.rs
tests/: direct.rs  helper.rs  rocket.rs
tests/helper/: mod.rs
