[package]
name = "reqwest_mock"
version = "0.4.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
description = "Provides a mockable reqwest-like HTTP client."
repository = "https://github.com/leoschwarz/reqwest_mock"
documentation = "https://docs.rs/reqwest_mock/"
keywords = ["http", "request", "client"]

[dependencies]
base64 = "0.9.0"
error-chain = "0.10.0"
log = "0.4.0"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
twox-hash = "1.1"
