[package]
name = "reqwest_mock"
version = "0.7.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
description = "Provides a mockable reqwest-like HTTP client."
repository = "https://github.com/leoschwarz/reqwest_mock"
documentation = "https://docs.rs/reqwest_mock/"
keywords = ["http", "request", "client"]

[dependencies]
base64 = "0.13.0"
error-chain = "0.12"
http = "0.2"
log = "0.4.0"
reqwest = { version = "0.10", features = ["blocking", "gzip"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
twox-hash = "1.1"
url = "2.1"

[dev-dependencies]
futures = "0.1"
hyper = "0.11"
regex = "1.1.0"
